# dockerify

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: build.yml  release.yml
ci/: make-release.sh
scripts/: update-version.sh
src/: main.rs  templating_engine.rs  utils.rs
src/templates/: schema.json
src/templates/django/: config.json
src/templates/nestjs/: Dockerfile.__template__
src/templates/nestjs-sequelize/: Dockerfile.__template__
src/templates/nextjs/: Dockerfile.__template__
