[package]
name = "dockerify"
description = "A command line tool to generate Dockerfiles and docker-compose files for your projects"
version = "0.0.1"
edition = "2021"
authors = ["endalk200 <eb808826@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/endalk200/dockerify"
readme = "README.md"
keywords = ["docker", "dockerfile", "docker-compose", "cli", "dockerify"]
categories = ["development-tools", "command-line-utilities"]
homepage = "https://github.com/endalk200/dockerify"
documentation = "https://github.com/endalk200/dockerify#readme"

[[bin]]
name = "dockerify"
path = "src/main.rs"

[dependencies]
dialoguer = "0.10.4"